--- a/ann_dnn.ipynb
+++ b/ann_dnn.ipynb
@@ -304,7 +304,19 @@
     "\n",
     "Para resolver el problema XOR utilizando un único perceptrón, necesitaríamos una función de activación no lineal, como la función sigmoide. Sin embargo, incluso con la función sigmoide, un único perceptrón no puede modelar correctamente la operación XOR.\n",
     "\n",
-    "La solución al problema XOR implica el uso de una arquitectura de red neuronal más compleja, como un Perceptrón Multicapa (MLP). Con un MLP, que consta de al menos una capa oculta, podemos capturar y aprender las relaciones no lineales entre las entradas y las salidas, lo que nos permite resolver el problema XOR con alta precisión."
+    "La solución al problema XOR implica el uso de una arquitectura de red neuronal más compleja, como un Perceptrón Multicapa (MLP). Con un MLP, que consta de al menos una capa oculta, podemos capturar y aprender las relaciones no lineales entre las entradas y las salidas, lo que nos permite resolver el problema XOR con alta precisión.\n",
+    "\n",
+    "### Resultados XOR\n",
+    "\n",
+    "- Un modelo simple (menos neuronas en la capa oculta) resulta en una superficie de decisión más simple:\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/marsgr6/r-scripts/master/imgs/loss_surface_2h.png\" alt=\"drawing\" width=\"600\"/>\n",
+    "\n",
+    "- Incrementamos las neuronas en la capa oculta y el resultado es un modelo (y superficie de decisión) más complejos:\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/marsgr6/r-scripts/master/imgs/loss_surface_10h.png\" alt=\"drawing\" width=\"600\"/>\n",
+    "\n",
+    "- Modelos más simples son siempre preferibles"
    ]
   },
   {
@@ -572,7 +584,13 @@
     "\n",
     "- Vamos a construir una regresión lineal simple y contrastar el modelo contra un perceptrón multicapa.\n",
     "\n",
-    "- En particular en este ejercicio queremos demostrar el sobreajuste de un modelo MLP.\n",
+    "- Variables:\n",
+    "  - $X$: altura en pulgadas. \n",
+    "  - $y$: peso en liras.\n",
+    "\n",
+    "- En particular en este ejercicio queremos demostrar el sobreajuste de un modelo MLP. \n",
+    "  - Los datos tienen una relación positiva y lineal.\n",
+    "  - Una regresión lineal simple es el mejor modelo en este caso, este es nuestro modelo base con el que compararemos nuestro MLP.\n",
     "\n",
     "### Sobreajuste (overfitting)\n",
     "\n",
@@ -588,7 +606,21 @@
     "\n",
     "4. **Curva de aprendizaje divergente**: Las curvas de aprendizaje del modelo pueden mostrar una divergencia entre el error de entrenamiento y el error de validación, donde el error de entrenamiento continúa disminuyendo mientras que el error de validación comienza a aumentar.\n",
     "\n",
-    "Para evitar el sobreajuste, es importante utilizar técnicas como la regularización, la validación cruzada, el conjunto de validación y el ajuste de hiperparámetros para controlar la complejidad del modelo y garantizar que generalice bien a datos no vistos. Estas técnicas ayudan a encontrar el equilibrio adecuado entre el sesgo y la varianza del modelo, lo que conduce a un mejor rendimiento general en datos nuevos."
+    "Para evitar el sobreajuste, es importante utilizar técnicas como la regularización, la validación cruzada, el conjunto de validación y el ajuste de hiperparámetros para controlar la complejidad del modelo y garantizar que generalice bien a datos no vistos. Estas técnicas ayudan a encontrar el equilibrio adecuado entre el sesgo y la varianza del modelo, lo que conduce a un mejor rendimiento general en datos nuevos.\n",
+    "\n",
+    "### Resultados para una regresión simple\n",
+    "\n",
+    "- Podemos observar (en el panel izquierdo) que para 10 neuronas en la capa oculta, obtenemos un modelo de MLP (rojo), cercano a la curva de regresión lineal (verde). \n",
+    "  - El MLP tienen un error más grande, no es nuestro mejor modelo. \n",
+    "  - La línea de regresión lineal es nuestro modelo base, y es el mejor modelo en este ejemplo.\n",
+    "  \n",
+    "- Para 50 neuronas en la capa oculta (en el panel central), el MLP replica la línea de regresión lineal, es decir ha sido capaz de construir un modelo tan bueno como el mejor. \n",
+    "\n",
+    "- Para 100 neuronas (en el panel derecho), el MLP tiene un error MSE, más pequeño que la regresión lineal, sin embargo es el peor de los modelos MLP conseguidos. \n",
+    "  - Este es un ejemplo de sobreajuste. El modelo funciona bien para los datos observados, pero no es capaz de generalizar. \n",
+    "  - En el MLP obsevamos que a medida que la alura ($X$) baja, el peso ($y$) sube. Esto no puede ser correcto. \n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/marsgr6/r-scripts/master/imgs/regression_curves.png\" alt=\"drawing\" width=\"800\"/>"
    ]
   },
   {
@@ -632,9 +664,9 @@
    ],
    "source": [
     "# Datos\n",
-    "x = np.array([63, 64, 66, 69, 69, 71, 71, 72, 73, 75])\n",
+    "x = np.array([63, 64, 66, 69, 69, 71, 71, 72, 73, 75])  # altura (pulgadas)\n",
     "\n",
-    "y = np.array([127, 121, 142, 157, 162, 156, 169, 165, 181, 208])\n",
+    "y = np.array([127, 121, 142, 157, 162, 156, 169, 165, 181, 208])  # peso (libras)\n",
     "\n",
     "@ipywidgets.interact\n",
     "def plot(N_h = [5, 10, 50, 100, 500, 1000],\n",
