--- a/ann_dnn.ipynb
+++ b/ann_dnn.ipynb
@@ -586,7 +586,7 @@
     "\n",
     "- Variables:\n",
     "  - $X$: altura en pulgadas. \n",
-    "  - $y$: peso en liras.\n",
+    "  - $y$: peso en libras.\n",
     "\n",
     "- En particular en este ejercicio queremos demostrar el sobreajuste de un modelo MLP. \n",
     "  - Los datos tienen una relación positiva y lineal.\n",
