--- a/ann_dnn.ipynb
+++ b/ann_dnn.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "### Funciones de activación\n",
     "\n",
-    "Las funciones de activación son elementos fundamentales en las redes neuronales artificiales, ya que introducen no linealidades en el modelo, permitiendo que la red pueda aprender y modelar relaciones complejas en los datos. Aquí tienes una descripción de algunas de las funciones de activación más importantes:\n",
+    "Las funciones de activación son elementos fundamentales en las redes neuronales artificiales, ya que introducen no linealidades en el modelo, permitiendo que la red pueda aprender y modelar relaciones complejas en los datos. A continuación tienes una descripción de algunas de las funciones de activación más importantes:\n",
     "\n",
     "1. **Función Sigmoide**:\n",
     "   - Fórmula: $ f(x) = \\frac{1}{1 + e^{-x}} $\n",
@@ -155,7 +155,7 @@
     "\n",
     "### Red neuronal feedforward\n",
     "\n",
-    "Una red neuronal feedforward, también conocida como perceptrón multicapa o red neuronal de propagación hacia adelante, es uno de los tipos más simples y comunes de redes neuronales artificiales. Aquí te explico cómo funciona:\n",
+    "Una red neuronal feedforward, también conocida como perceptrón multicapa o red neuronal de propagación hacia adelante, es uno de los tipos más simples y comunes de redes neuronales artificiales. \n",
     "\n",
     "1. **Arquitectura**: Una red neuronal feedforward está compuesta por una serie de capas de neuronas, que están dispuestas en forma de grafo acíclico dirigido. Las neuronas en una capa están conectadas con todas las neuronas de la capa siguiente, pero no hay conexiones hacia atrás, lo que significa que la información fluye en una sola dirección, de entrada a salida.\n",
     "\n",
@@ -176,7 +176,9 @@
     "\n",
     "### Retropropagación (backpropagation)\n",
     "\n",
-    "La retropropagación (backpropagation) es el algoritmo fundamental utilizado para entrenar redes neuronales mediante el cálculo eficiente de los gradientes de la función de pérdida con respecto a los pesos de la red. Este algoritmo se basa en el principio del descenso del gradiente, donde los pesos se actualizan en la dirección opuesta al gradiente de la función de pérdida con respecto a los pesos, con el objetivo de minimizar la pérdida. Aquí te explico el proceso de retropropagación paso a paso, incluyendo la matemática involucrada:\n",
+    "La retropropagación (backpropagation) es el algoritmo fundamental utilizado para entrenar redes neuronales mediante el cálculo eficiente de los gradientes de la función de pérdida con respecto a los pesos de la red. Este algoritmo se basa en el principio del descenso del gradiente, donde los pesos se actualizan en la dirección opuesta al gradiente de la función de pérdida con respecto a los pesos, con el objetivo de minimizar la pérdida. \n",
+    "\n",
+    "A continuación se detalla el proceso de retropropagación paso a paso, incluyendo la matemática involucrada:\n",
     "\n",
     "Supongamos que tenemos una red neuronal feedforward con múltiples capas, y queremos entrenarla para una tarea de clasificación. Sea $ L $ la función de pérdida que queremos minimizar, que generalmente se define como la diferencia entre las salidas predichas ($ \\hat{y} $) y las salidas reales ($ y $).\n",
     "\n",
@@ -214,7 +216,9 @@
     "\n",
     "### Problemas de clasficación\n",
     "\n",
-    "Una red neuronal feedforward se puede utilizar para problemas de clasificación mediante un proceso de entrenamiento donde la red aprende a asignar entradas a diferentes categorías o clases. Aquí te explico cómo funciona una red feedforward para un problema de clasificación:\n",
+    "Una red neuronal feedforward se puede utilizar para problemas de clasificación mediante un proceso de entrenamiento donde la red aprende a asignar entradas a diferentes categorías o clases. \n",
+    "\n",
+    "A continuación se detalla cómo funciona una red feedforward para un problema de clasificación:\n",
     "\n",
     "1. **Preparación de datos**: Primero, necesitas preparar tus datos de entrenamiento. Esto incluye dividir tus datos en conjuntos de entrenamiento, validación y prueba, así como realizar cualquier preprocesamiento necesario, como normalización de características.\n",
     "\n",
@@ -248,7 +252,9 @@
     "\n",
     "### Problemas de regresión\n",
     "\n",
-    "Para un problema de regresión, donde el objetivo es predecir un valor numérico continuo en lugar de una categoría, puedes utilizar una red neuronal feedforward de manera similar, pero con algunas diferencias en la arquitectura de la red y la función de pérdida. Aquí te explico cómo funciona una red feedforward para un problema de regresión:\n",
+    "Para un problema de regresión, donde el objetivo es predecir un valor numérico continuo en lugar de una categoría, puedes utilizar una red neuronal feedforward de manera similar, pero con algunas diferencias en la arquitectura de la red y la función de pérdida. \n",
+    "\n",
+    "Funcionamiento de una red feedforward para un problema de regresión:\n",
     "\n",
     "1. **Preparación de datos**: Al igual que en el caso de clasificación, necesitas preparar tus datos de entrenamiento, dividirlos en conjuntos de entrenamiento, validación y prueba, y realizar cualquier preprocesamiento necesario, como normalización de características.\n",
     "\n",
@@ -1331,7 +1337,9 @@
    "source": [
     "### Escalado de datos\n",
     "\n",
-    "Sí, es una buena práctica escalar los datos antes de alimentarlos a un perceptrón multicapa u otro tipo de modelo de redes neuronales. El escalado de datos puede ayudar a mejorar el rendimiento y la convergencia del modelo. Aquí hay algunas razones por las cuales es recomendable escalar los datos:\n",
+    "Sí, es una buena práctica escalar los datos antes de alimentarlos a un perceptrón multicapa u otro tipo de modelo de redes neuronales. El escalado de datos puede ayudar a mejorar el rendimiento y la convergencia del modelo. \n",
+    "\n",
+    "Se listan a continuación algunas razones por las cuales es recomendable escalar los datos:\n",
     "\n",
     "1. **Mayor estabilidad numérica**: Al escalar los datos, reduces la varianza de las características, lo que puede ayudar a evitar problemas numéricos durante el entrenamiento del modelo.\n",
     "\n",
@@ -1349,7 +1357,7 @@
     "\n",
     "Escalar los datos antes de alimentarlos a un perceptrón multicapa puede mejorar su rendimiento y estabilidad, y es una práctica comúnmente recomendada en el campo del aprendizaje automático.\n",
     "\n",
-    "Tanto la normalización como la estandarización son técnicas comunes para escalar datos antes de alimentarlos a modelos de aprendizaje automático, como perceptrones multicapa y otros tipos de redes neuronales. Sin embargo, la elección entre normalización y estandarización depende del contexto del problema y las características de los datos. Aquí hay algunas pautas generales sobre cuándo usar cada técnica:\n",
+    "Tanto la normalización como la estandarización son técnicas comunes para escalar datos antes de alimentarlos a modelos de aprendizaje automático, como perceptrones multicapa y otros tipos de redes neuronales. Sin embargo, la elección entre normalización y estandarización depende del contexto del problema y las características de los datos. A continuación se listan algunas pautas generales sobre cuándo usar cada técnica:\n",
     "\n",
     "1. **Normalización (min-max scaler*)**:\n",
     "   - Se utiliza cuando los datos tienen distribuciones sesgadas o no están distribuidos normalmente.\n",
@@ -1708,7 +1716,7 @@
     "\n",
     "Este conjunto de datos incluye varias características del automóvil, como el cilindraje, la cilindrada, el peso, la potencia y el año del modelo, entre otros. El objetivo principal de este conjunto de datos es predecir la eficiencia del combustible en términos de millas por galón (MPG) de un automóvil en función de sus características.\n",
     "\n",
-    "Aquí hay una descripción de las columnas comunes que se encuentran en este conjunto de datos:\n",
+    "Descripción de las columnas que se encuentran en este conjunto de datos:\n",
     "\n",
     "1. **MPG**: Millas por galón, que es la variable objetivo a predecir.\n",
     "2. **Cilindros**: Número de cilindros en el motor.\n",
@@ -2650,7 +2658,7 @@
     "id": "n5TyT84TuskU"
    },
    "source": [
-    "Evaluar una regresión de forma visual es una práctica común para comprender cómo se ajusta el modelo a los datos y para identificar posibles problemas como el sobreajuste o subajuste. Aquí hay algunas técnicas comunes para evaluar una regresión de forma visual:\n",
+    "Evaluar una regresión de forma visual es una práctica común para comprender cómo se ajusta el modelo a los datos y para identificar posibles problemas como el sobreajuste o subajuste. Algunas técnicas comunes para evaluar una regresión de forma visual son:\n",
     "\n",
     "1. **Gráfico de dispersión con línea de regresión**: Un gráfico de dispersión de los datos reales con una línea que representa la regresión ajustada proporciona una visualización básica del ajuste del modelo a los datos. Puedes ver cómo la línea se ajusta a los puntos de datos y evaluar visualmente si captura la tendencia general de los datos.\n",
     "\n",
