--- a/ann_dnn.ipynb
+++ b/ann_dnn.ipynb
@@ -174,6 +174,26 @@
     "\n",
     "Una red neuronal feedforward funciona propagando la información hacia adelante a través de múltiples capas de neuronas, calculando las salidas en cada capa mediante combinaciones lineales de las entradas ponderadas por los pesos y aplicando funciones de activación no lineales. Luego, se ajustan los pesos durante el entrenamiento para minimizar la pérdida utilizando algoritmos de optimización como el descenso del gradiente estocástico y la retropropagación.\n",
     "\n",
+    "### Propagación hacia adelante (Forward Propagation)\n",
+    "\n",
+    "La propagación feedforward de manera matricial para una capa oculta en un MLP es la siguiente:\n",
+    "\n",
+    "$$ Z^l = W^l \\cdot A^{l-1} + B^l $$\n",
+    "$$ A^l = \\sigma(Z^l) $$\n",
+    "\n",
+    "Donde:\n",
+    "- $ l $ es el índice de la capa.\n",
+    "- $ Z^l $ es el vector de entrada neta de todas las neuronas en la capa $ l $.\n",
+    "- $ W^l $ es la matriz de pesos de todas las conexiones entre las neuronas en la capa $ l $ y las neuronas en la capa $ l-1 $.\n",
+    "- $ A^{l-1} $ es el vector de salida de todas las neuronas en la capa $ l-1 $.\n",
+    "- $ B^l $ es el vector de sesgos (biases) de todas las neuronas en la capa $ l $.\n",
+    "- $ \\sigma $ es la función de activación aplicada elemento por elemento al vector $ Z^l $.\n",
+    "- $ A^l $ es el vector de salida de todas las neuronas en la capa $ l $.\n",
+    "\n",
+    "Para la capa de salida, la fórmula es similar pero sin aplicar la función de activación si la salida es lineal, o aplicando la función de activación adecuada si la salida es no lineal.\n",
+    "\n",
+    "Esta formulación matricial permite realizar eficientemente el cálculo del feedforward utilizando operaciones matriciales y de vectores, lo que es especialmente útil en implementaciones computacionales eficientes de MLPs.\n",
+    "\n",
     "### Retropropagación (backpropagation)\n",
     "\n",
     "La retropropagación (backpropagation) es el algoritmo fundamental utilizado para entrenar redes neuronales mediante el cálculo eficiente de los gradientes de la función de pérdida con respecto a los pesos de la red. Este algoritmo se basa en el principio del descenso del gradiente, donde los pesos se actualizan en la dirección opuesta al gradiente de la función de pérdida con respecto a los pesos, con el objetivo de minimizar la pérdida. \n",
