--- a/ann_dnn.ipynb
+++ b/ann_dnn.ipynb
@@ -174,6 +174,8 @@
     "\n",
     "Una red neuronal feedforward funciona propagando la información hacia adelante a través de múltiples capas de neuronas, calculando las salidas en cada capa mediante combinaciones lineales de las entradas ponderadas por los pesos y aplicando funciones de activación no lineales. Luego, se ajustan los pesos durante el entrenamiento para minimizar la pérdida utilizando algoritmos de optimización como el descenso del gradiente estocástico y la retropropagación.\n",
     "\n",
+    "<img src=\"https://raw.githubusercontent.com/marsgr6/r-scripts/master/imgs/1-s2.0-S2667096822000891-gr1_lrg.jpg\" alt=\"drawing\" width=\"600\"/>\n",
+    "\n",
     "### Propagación hacia adelante (Forward Propagation)\n",
     "\n",
     "La propagación feedforward de manera matricial para una capa oculta en un MLP es la siguiente:\n",
@@ -3393,7 +3395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -4260,5 +4262,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
