--- a/ann_dnn.ipynb
+++ b/ann_dnn.ipynb
@@ -3047,7 +3047,145 @@
     "\n",
     "Idealmente, durante el entrenamiento del modelo, tanto la pérdida de entrenamiento como la pérdida de prueba disminuirán con el tiempo. Sin embargo, si el modelo comienza a sobreajustar los datos de entrenamiento, es probable que la pérdida de prueba aumente, mientras que la pérdida de entrenamiento continuará disminuyendo. Esto indica que el modelo está aprendiendo a ajustarse demasiado bien a los datos de entrenamiento y no puede generalizar bien a nuevos datos.\n",
     "\n",
-    "Un gráfico de pérdida de entrenamiento versus pérdida de prueba es una herramienta útil para monitorear el rendimiento del modelo durante el entrenamiento y la evaluación, y para identificar problemas de sobreajuste o subajuste. Si las curvas de pérdida de entrenamiento y prueba divergen significativamente, es posible que sea necesario ajustar la complejidad del modelo, aplicar técnicas de regularización o recopilar más datos para mejorar la generalización del modelo."
+    "Un gráfico de pérdida de entrenamiento versus pérdida de prueba es una herramienta útil para monitorear el rendimiento del modelo durante el entrenamiento y la evaluación, y para identificar problemas de sobreajuste o subajuste. Si las curvas de pérdida de entrenamiento y prueba divergen significativamente, es posible que sea necesario ajustar la complejidad del modelo, aplicar técnicas de regularización o recopilar más datos para mejorar la generalización del modelo.\n",
+    "\n",
+    "### Función de pérdida\n",
+    "\n",
+    "Una función de pérdida, o loss function en inglés, es una medida que cuantifica la discrepancia entre las predicciones de un modelo de aprendizaje automático y los valores reales del conjunto de datos de entrenamiento. Su importancia radica en varios aspectos clave del proceso de entrenamiento y evaluación de modelos en machine learning:\n",
+    "\n",
+    "1. **Optimización del modelo:** Durante el entrenamiento, el objetivo principal es minimizar la función de pérdida. Esto guía al modelo a ajustar sus parámetros de manera que las predicciones se acerquen lo más posible a los valores reales.\n",
+    "\n",
+    "2. **Evaluación del rendimiento:** La función de pérdida proporciona una medida cuantitativa del rendimiento del modelo. Cuanto menor sea la pérdida, mejor será el rendimiento del modelo en el conjunto de datos de entrenamiento.\n",
+    "\n",
+    "3. **Comparación entre modelos:** Permite comparar el rendimiento de diferentes modelos en un problema dado. Los modelos que minimizan la función de pérdida de manera más efectiva suelen producir predicciones más precisas.\n",
+    "\n",
+    "4. **Regularización:** Algunas funciones de pérdida incluyen términos de regularización que penalizan modelos más complejos, ayudando a prevenir el sobreajuste.\n",
+    "\n",
+    "5. **Ajuste del modelo a objetivos específicos:** Dependiendo del tipo de problema y los objetivos específicos, se pueden seleccionar diferentes funciones de pérdida para optimizar el modelo de manera acorde a dichos objetivos (por ejemplo, minimizar errores cuadráticos para regresión o entropía cruzada para clasificación).\n",
+    "\n",
+    "La función de pérdida es un componente fundamental en el entrenamiento y evaluación de modelos de aprendizaje automático, ya que guía el proceso de optimización del modelo y proporciona una medida cuantitativa del rendimiento del mismo.\n",
+    "\n",
+    "Aquí tienes las definiciones resumidas de las funciones de pérdida comunes:\n",
+    "\n",
+    "### Regresión:\n",
+    "\n",
+    "1. **Error Cuadrático Medio (MSE - Mean Squared Error):**\n",
+    "   - Calcula la media de los cuadrados de las diferencias entre las predicciones y los valores reales.\n",
+    "   - Fórmula: $$ \\text{MSE} = \\frac{1}{n} \\sum_{i=1}^{n} (y_i - \\hat{y}_i)^2 $$\n",
+    "   \n",
+    "2. **Error Absoluto Medio (MAE - Mean Absolute Error):**\n",
+    "   - Calcula la media de las diferencias absolutas entre las predicciones y los valores reales.\n",
+    "   - Fórmula: $$ \\text{MAE} = \\frac{1}{n} \\sum_{i=1}^{n} |y_i - \\hat{y}_i| $$\n",
+    "\n",
+    "3. **Error Cuadrático Medio Logarítmico (MSLE):**\n",
+    "   - Similar al MSE pero calcula la media de los cuadrados de las diferencias logarítmicas.\n",
+    "   - Fórmula: $$ \\text{MSLE} = \\frac{1}{n} \\sum_{i=1}^{n} (\\log(y_i + 1) - \\log(\\hat{y}_i + 1))^2 $$\n",
+    "\n",
+    "4. **Pérdida de Huber:**\n",
+    "   - Similar al MAE pero con una transición suave entre MAE y MSE cerca de cero.\n",
+    "\n",
+    "La pérdida de Huber es una función de pérdida que combina las ventajas del error cuadrático medio (MSE) y el error absoluto medio (MAE). Es especialmente útil en problemas de regresión donde pueden existir datos atípicos o ruido en los datos.\n",
+    "\n",
+    "La fórmula de la pérdida de Huber para una sola muestra se puede expresar como:\n",
+    "\n",
+    "$$ L(y, \\hat{y}) = \\begin{cases} \\frac{1}{2}(y - \\hat{y})^2, & \\text{si } |y - \\hat{y}| \\leq \\delta \\\\ \\delta(|y - \\hat{y}| - \\frac{1}{2}\\delta), & \\text{en otro caso} \\end{cases} $$\n",
+    "\n",
+    "Donde:\n",
+    "- $ y $ es el valor verdadero.\n",
+    "- $ \\hat{y} $ es la predicción del modelo.\n",
+    "- $ \\delta $ es un parámetro que controla el punto de transición entre el comportamiento lineal del error cuadrático y el comportamiento constante del error absoluto.\n",
+    "\n",
+    "Cuando la diferencia absoluta entre el valor verdadero y la predicción es menor o igual que $ \\delta $, la pérdida de Huber se comporta como el error cuadrático medio, lo que significa que penaliza los errores cuadráticos de manera similar al MSE. Sin embargo, cuando la diferencia absoluta supera $ \\delta $, la pérdida de Huber cambia a un comportamiento lineal, similar al error absoluto medio. Esto permite que la pérdida de Huber sea menos sensible a los valores atípicos en los datos en comparación con el MSE.\n",
+    "\n",
+    "En resumen, la pérdida de Huber es una alternativa robusta al MSE y al MAE, que puede ser útil en situaciones donde se desea una penalización más suave de los errores grandes.\n",
+    "\n",
+    "\n",
+    "### Clasificación binaria:\n",
+    "\n",
+    "1. **Entropía Cruzada Binaria (Binary Crossentropy):**\n",
+    "   - Mide la discrepancia entre las distribuciones de probabilidad de las clases predichas y reales en problemas de clasificación binaria.\n",
+    "   - Fórmula: $$ \\text{BCE} = -\\frac{1}{n} \\sum_{i=1}^{n} \\left( y_i \\cdot \\log(\\hat{y}_i) + (1 - y_i) \\cdot \\log(1 - \\hat{y}_i) \\right) $$\n",
+    "\n",
+    "2. **Pérdida de Hinge:**\n",
+    "   - Utilizado en máquinas de vectores de soporte (SVM) para clasificación binaria.\n",
+    "\n",
+    "La pérdida de Hinge, también conocida como pérdida de bisagra, es una función de pérdida comúnmente utilizada en problemas de clasificación binaria y en máquinas de vectores de soporte (SVM). Esta función de pérdida es especialmente útil cuando se trabaja con clasificadores que generan una salida continua en lugar de probabilidades.\n",
+    "\n",
+    "La fórmula de la pérdida de Hinge para una sola muestra se puede expresar como:\n",
+    "\n",
+    "$$ L(y, \\hat{y}) = \\max(0, 1 - y \\cdot \\hat{y}) $$\n",
+    "\n",
+    "Donde:\n",
+    "- $ y $ es el valor verdadero de la clase (1 o -1 en el caso de clasificación binaria).\n",
+    "- $ \\hat{y} $ es la predicción del modelo (también puede ser una puntuación de decisión).\n",
+    "- $ \\max(0, 1 - y \\cdot \\hat{y}) $ representa el término de pérdida, que es cero si la predicción es correcta y positiva si la predicción es incorrecta.\n",
+    "\n",
+    "La pérdida de Hinge penaliza las predicciones incorrectas con un valor proporcional a la distancia entre la predicción y el margen de decisión (1 en este caso). Si la predicción es correcta (es decir, $ y \\cdot \\hat{y} $ es mayor que 1), la pérdida es cero. Si la predicción está en el lado incorrecto del margen, la pérdida aumenta linealmente con la distancia al margen.\n",
+    "\n",
+    "En resumen, el objetivo del entrenamiento es minimizar esta función de pérdida para mejorar la capacidad del modelo para clasificar correctamente las muestras.\n",
+    "\n",
+    "3. **Pérdida de Sigmoid:**\n",
+    "   - Similar a la entropía cruzada binaria pero con una función de activación sigmoide al final.\n",
+    "   - Fórmula: $$ \\text{Sigmoid} = -\\frac{1}{n} \\sum_{i=1}^{n} \\left( y_i \\cdot \\log(\\hat{y}_i) + (1 - y_i) \\cdot \\log(1 - \\hat{y}_i) \\right) $$\n",
+    "\n",
+    "### Clasificación multiclase:\n",
+    "\n",
+    "1. **Entropía Cruzada Categórica (Categorical Crossentropy):**\n",
+    "   - Utilizada para problemas de clasificación con más de dos clases.\n",
+    "   - Fórmula: $$ \\text{CCE} = -\\frac{1}{n} \\sum_{i=1}^{n} \\sum_{j=1}^{C} y_{ij} \\cdot \\log(\\hat{y}_{ij}) $$\n",
+    "\n",
+    "2. **Pérdida Exponencial:**\n",
+    "   - A menudo utilizada en clasificación multiclase, es similar a la pérdida softmax pero con una penalización más fuerte para las clasificaciones incorrectas.\n",
+    "\n",
+    "La pérdida exponencial es una función de pérdida utilizada en problemas de clasificación multiclase. A menudo se emplea en conjunción con modelos de clasificación como redes neuronales. Esta función de pérdida es similar a la pérdida softmax, pero penaliza de manera más intensa las clasificaciones incorrectas.\n",
+    "\n",
+    "La fórmula de la pérdida exponencial para una sola muestra se puede expresar como:\n",
+    "\n",
+    "$$ L(y, \\hat{y}) = - \\sum_{i} y_i \\cdot \\exp(\\hat{y}_i) $$\n",
+    "\n",
+    "Donde:\n",
+    "- $ y $ es un vector one-hot que representa las clases reales (etiquetas).\n",
+    "- $ \\hat{y} $ es un vector de probabilidades predichas por el modelo.\n",
+    "- $ y_i $ y $ \\hat{y}_i $ son las probabilidades reales y predichas para la clase $ i $, respectivamente.\n",
+    "\n",
+    "Al igual que la pérdida softmax, la función de pérdida exponencial penaliza más fuertemente las clasificaciones incorrectas, pero utilizando la exponencial de la probabilidad predicha en lugar del logaritmo. El objetivo del entrenamiento es minimizar esta función de pérdida para mejorar la precisión de las predicciones del modelo.\n",
+    "\n",
+    "3. **Pérdida Softmax:**\n",
+    "   - Mide la discrepancia entre las distribuciones de probabilidad de las clases predichas y reales en problemas de clasificación multiclase.\n",
+    "\n",
+    "La pérdida Softmax, también conocida como entropía cruzada categórica, se utiliza comúnmente en problemas de clasificación multiclase. Esta función de pérdida mide la discrepancia entre las distribuciones de probabilidad de las clases predichas y las clases reales.\n",
+    "\n",
+    "La fórmula de la pérdida Softmax para una sola muestra se puede expresar como:\n",
+    "\n",
+    "$$ L(y, \\hat{y}) = - \\sum_{i} y_i \\cdot \\log(\\hat{y}_i) $$\n",
+    "\n",
+    "Donde:\n",
+    "- $ y $ es un vector one-hot que representa las clases reales (etiquetas).\n",
+    "- $ \\hat{y} $ es un vector de probabilidades predichas por el modelo.\n",
+    "- $ y_i $ y $ \\hat{y}_i $ son las probabilidades reales y predichas para la clase $ i $, respectivamente.\n",
+    "\n",
+    "La función de pérdida Softmax penaliza más fuertemente las clasificaciones incorrectas, ya que la diferencia entre las probabilidades reales y las predichas se multiplica por el logaritmo de la probabilidad predicha. El objetivo del entrenamiento es minimizar esta función de pérdida para mejorar la precisión de las predicciones del modelo.\n",
+    "\n",
+    "### Clasificación multietiqueta:\n",
+    "\n",
+    "1. **Pérdida de Hamming:**\n",
+    "   - Mide la fracción de las etiquetas mal clasificadas.\n",
+    "   - Fórmula: $$ \\text{Hamming} = \\frac{1}{n} \\sum_{i=1}^{n} \\frac{1}{C} \\sum_{j=1}^{C} I(y_{ij} \\neq \\hat{y}_{ij}) $$\n",
+    "\n",
+    "### Modelos generativos:\n",
+    "\n",
+    "En el contexto de modelos generativos, aquí están las definiciones de las funciones de pérdida mencionadas:\n",
+    "\n",
+    "1. **Divergencia de Kullback-Leibler (KL Divergence):**\n",
+    "   - Mide la diferencia entre dos distribuciones de probabilidad. En el contexto de GANs, se utiliza para cuantificar cuán diferente es la distribución de las muestras generadas por el generador de la distribución real de los datos.\n",
+    "   - Fórmula: $$ D_{KL}(P \\| Q) = \\sum_{i} P(i) \\log\\left(\\frac{P(i)}{Q(i)}\\right) $$\n",
+    "\n",
+    "2. **Pérdida del Autoencoder:**\n",
+    "   - En un autoencoder, la pérdida se refiere a la discrepancia entre la entrada original y la salida reconstruida por el modelo. Se puede utilizar MSE (Error Cuadrático Medio) o MAE (Error Absoluto Medio) entre la entrada y la salida para entrenar el modelo.\n",
+    "   - Fórmula (MSE): $$ \\text{MSE} = \\frac{1}{n} \\sum_{i=1}^{n} (x_i - \\hat{x}_i)^2 $$\n",
+    "   - Fórmula (MAE): $$ \\text{MAE} = \\frac{1}{n} \\sum_{i=1}^{n} |x_i - \\hat{x}_i| $$\n",
+    "\n",
+    "Estas funciones de pérdida se utilizan en el proceso de entrenamiento de modelos generativos para optimizar los parámetros del modelo y mejorar su capacidad para generar muestras realistas o reconstruir adecuadamente las entradas originales."
    ]
   },
   {
@@ -3395,7 +3533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
